<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/call_info_holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/call_duration_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/call_duration" />

        <TextView
            android:id="@+id/call_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/call_duration_text" />

        <TextView
            android:id="@+id/call_state_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/call_duration_text"
            android:layout_marginTop="5dp"
            android:text="@string/call_state" />

        <TextView
            android:id="@+id/call_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/call_duration"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/call_duration_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/call_state"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/mute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mute_audio" />

                <CheckBox
                    android:id="@+id/mute_call_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/mute"
                    android:enabled="false" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/speakerphone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/speakerphone" />

                <CheckBox
                    android:id="@+id/speakerphone_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/speakerphone" />
            </LinearLayout>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/video_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_digits" />

        <EditText
            android:id="@+id/dtmf_digits"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:digits="0123456789*#"
            android:enabled="false"
            android:inputType="phone" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lock_meeting_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lock_meeting" />

        <Switch
            android:id="@+id/lock_meeting_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/participants"
            android:textSize="20sp" />

        <ListView
            android:id="@+id/participants_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

    <Button
        android:id="@+id/end_call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/end_call"
        android:textSize="16sp" />
</LinearLayout>